# BookAnything

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  goals.yaml  harness-paradigm-ai-agents.json  harness-paradigm-ai-agents.md  new-project.sh  package-lock.json  pyproject.toml  requirements.txt  run.sh
.claude/: settings.json
.claude/agents/: chapter-writer.md  evaluator.md  planner.md  webapp-reviewer.md
.claude/commands/: harness-status.md  harness-verify-json.md
.claude/hooks/: post-edit-json-validate.sh  pre-tool-use.sh  session-start-context.sh  subagent-logger.sh
.claude/rules/: chapter-json-contract.md  git-safety.md  path-boundaries.md  repo-layout.md  ui-patterns.md  (+3 more)
knowledge/: index.json
projects/: autoresearch.yaml  claude-code.yaml  example.yaml  fixture-repo.yaml  get-shit-done-cc.yaml  minbpe.yaml  pretext.yaml  pydantic-ai.yaml
prompts/: analyze.md  evaluate.md  plan.md
pyharness/: __init__.py  __main__.py  __main__.py.patch  claude_client.py  commands.py  config.py  errors.py  eval.py  graph_validate.py  init.py  log.py  repo.py  runner.py  schemas.py  state.py  static_graph.py
scripts/: preview.sh  rebuild-index.sh  reset.sh  status.sh  visual-test.js
tests/: test_analyze.py  test_claude_client.py  test_config.py  test_eval.py  test_eval_comparison.py  test_graph_validate.py  test_harness_integration.py  test_improve_diagnostics.py  test_init.py  test_plan_prompt.py  test_repo.py  test_runner.py  test_runner_integration.py  test_schemas.py  test_state.py  test_write_concurrency.py  test_write_validation.py
web-app/: next.config.ts  package-lock.json  package.json  playwright.config.ts
(+315 files in other folders)
