[project]
name = "pyharness"
version = "0.1.0"
description = "Source Code Book Generation Harness — Python orchestration engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "pathspec>=0.11",
]

[project.optional-dependencies.static-analysis]
tree-sitter = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pyharness = "pyharness.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/e2e/fixture-repo"]
markers = [
    "slow: real Claude CLI tests (deselect with '-m \"not slow\"')",
    "live: live e2e tests requiring real Claude CLI (run with '-m live')",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
